# chatgpt-terminal-ui

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
src/client/: mod.rs
src/engine/: conversation.rs  mod.rs
src/openai/: client.rs  error.rs  mod.rs  model.rs  reader.rs
src/ui/: mod.rs
