[package]
name = "chatgpt-terminal-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
crossterm = "0.27.0"
futures-util = "0.3.30"
ratatui = "0.25.0"
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
